@startuml database

title Database

entity users {
    * id
    ---
    * display_name
    * email
    * mainnet_address
    * oauth_token(s)
}

entity groups {
    * id
    ---
    * name
}

entity user_group_bridge {
    * user_id
    * group_id
}

entity bets {
    * id
    ---
    * group_id
    * title
    * description
    * address
    * close_time
    * resolved_time
}

entity user_bet_results {
    * user_id
    * bet_id
    ---
    * hasWon
}

entity friends_relation {
    * user_id
    * friend_id
}

user_group_bridge --> users
user_group_bridge --> groups
user_bet_results --> users
user_bet_results --> bets
friends_relation --> users
bets --> groups


@enduml